diy-base/main/default/objects/Product2/fields/Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Product_Features__c</fullName>
    <label>Product Features</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>