diy-base/main/default/objects/Product2/fields/Product_Maintenance_Safety__c.field-meta.xml
<CustomField>
    <fullName>Product_Maintenance_Safety__c</fullName>
    <label>Product Maintenance &amp; Safety</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>