diy-base/main/default/objects/Product2/fields/Product_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Specifications__c</fullName>
    <label>Product Specifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>